frontend/test/should_fail/exectype.gm
node class A
{
	f:foo;
	i:int;
	b:boolean;
	st:string;
	s:set<foo>;
	m:map<int,string>;
}

node class AA extends A;

node class B;

edge class H
{
	f:foo;
	i:int;
	b:boolean;
	st:string;
	s:set<foo>;
	m:map<int,string>;
}

edge class HH extends H;

edge class I;

enum foo { Bar, Bla }

